--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
         "console-stamp": "^3.1.2",
         "dotenv": "^17.2.1",
         "http": "^0.0.1-security",
+        "patchright": "^1.52.5",
         "puppeteer": "^24.16.2",
         "puppeteer-extra": "^3.3.6",
         "puppeteer-extra-plugin-stealth": "^2.11.2"
